# website-checker

./: README.rst  mypy.ini  pyproject.toml
.github/workflows/: build.yaml
src/: main.py
src/app/: metrics_client.py  website_checker.py
src/app/database/: __init__.py  database.py  repository.py
src/app/model/: metric.py  url.py
src/config/: config.conf  config.py  settings.py
